refactor: Make more use of McUtils, Optional and Streams